--- a/css/pufferfish_game.css
+++ b/css/pufferfish_game.css
@@ -106,6 +106,19 @@ body {
 }
 .fish_group li {
   cursor: pointer;
+  display: block;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  touch-action: manipulation;
+  outline: none;
+  background-color: transparent;
+}
+.fish_group li:focus,
+.fish_group li:active {
+  outline: none;
+  background-color: transparent;
 }
 .fish_group > li:nth-child(1) {
   top: 16%;
