--- a/scss/pufferfish_game.scss
+++ b/scss/pufferfish_game.scss
@@ -108,6 +108,20 @@ body {
 
 	li {
 		cursor: pointer;
+		display: block;
+		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+		-webkit-user-select: none;
+		user-select: none;
+		-webkit-touch-callout: none;
+		touch-action: manipulation;
+		outline: none;
+		background-color: transparent;
+	}
+
+	li:focus,
+	li:active {
+		outline: none;
+		background-color: transparent;
 	}
 
 	&>li:nth-child(1) {
