--- a/scss/pufferfish_game.scss
+++ b/scss/pufferfish_game.scss
@@ -72,6 +72,7 @@ body {
 	font-family: var(--font-family);
 	color: var(--black-color);
 	overflow: hidden;
+	user-select: none;
 }
 
 /***************************************/
@@ -84,7 +85,6 @@ body {
 	background: url('../img/main-bg.jpg') no-repeat center/cover;
 	margin: auto;
 	overflow: hidden;
-	user-select: none;
 
 	&.dim::before {
 		content: "";
@@ -677,6 +677,7 @@ body {
 		padding: 0 15px 37px 20px;
 		transform: translate(-50%, 100%);
 		transition: all 0.3s;
+		touch-action: none;
 
 		&.active {
 			transform: translate(-50%, 0);
