--- a/scss/pufferfish_game.scss
+++ b/scss/pufferfish_game.scss
@@ -80,7 +80,7 @@ body {
 	position: relative;
 	max-width: 430px;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	display: block;
 	background: url('../img/main-bg.jpg') no-repeat center/cover;
 	margin: auto;
