--- a/css/pufferfish_game.css
+++ b/css/pufferfish_game.css
@@ -464,6 +464,11 @@ body {
 .dim {
   padding: 0 20px 34px;
 }
+.dim .lottie {
+  width: 100%;
+  height: 190px;
+  margin: 44px auto 18px;
+}
 .dim .result_title {
   font-size: 24px;
   text-align: center;
@@ -478,13 +483,16 @@ body {
   background: url("../img/img-win@3x.png") no-repeat center/contain;
   margin: 44px auto 18px;
 }
+.dim .fail {
+  margin: 14px auto 20px;
+}
 .dim .fail::before {
   content: "";
   display: block;
   width: 160px;
   height: 120px;
   background: url("../img/sub-g-img-04@3x.png") no-repeat center/contain;
-  margin: 14px auto 20px;
+  margin: 0 auto 14px;
 }
 .dim .fail .tool {
   position: relative;
@@ -496,7 +504,7 @@ body {
   text-align: center;
   letter-spacing: -0.8px;
   color: #fff;
-  margin-top: 20px;
+  margin-top: 8px;
 }
 .dim .result_cont span {
   color: #204bd8;
